First commited as before_58236_rev1