@@ -24,7 +24,6 @@ import org.eclipse.core.runtime.IProgressMonitor;
 import org.eclipse.core.runtime.IStatus;
 import org.eclipse.core.runtime.Status;
 import org.eclipse.core.runtime.SubMonitor;
-import org.eclipse.jface.databinding.swt.DisplayRealm;
 import org.eclipse.jface.databinding.swt.SWTObservables;
 import org.eclipse.jface.dialogs.MessageDialog;
 import org.eclipse.jface.layout.GridDataFactory;
@@ -54,9 +53,10 @@ import org.eclipse.ui.progress.IJobRunnable;
 
 /**
  * @since 3.3
- *
+ * 
  */
-public class TestBackgroundSaveEditor extends EditorPart implements ISaveablesSource {
+public class TestBackgroundSaveEditor extends EditorPart implements
+		ISaveablesSource {
 
 	public class MySaveable extends Saveable {
 
@@ -64,16 +64,15 @@ public class TestBackgroundSaveEditor extends EditorPart implements ISaveablesSo
 
 		private boolean dirty;
 
-		@Override
 		public void doSave(IProgressMonitor monitor) throws CoreException {
 			SubMonitor subMonitor = SubMonitor.convert(monitor, 2);
 			IJobRunnable runnable = doSave(subMonitor.newChild(1), getSite());
-			if (runnable != null) {
+			if (runnable!=null) {
 				runnable.run(subMonitor.newChild(1));
 			}
+			monitor.done();
 		}
 
-		@Override
 		public IJobRunnable doSave(IProgressMonitor monitor,
 				IShellProvider shellProvider) throws CoreException {
 			monitor.beginTask("Saving in the foreground",
@@ -104,7 +103,6 @@ public class TestBackgroundSaveEditor extends EditorPart implements ISaveablesSo
 				return null;
 			}
 			IJobRunnable result = new IJobRunnable() {
-				@Override
 				public IStatus run(IProgressMonitor monitor) {
 					monitor.beginTask("Saving in the background",
 							data.backgroundSaveTime);
@@ -137,41 +135,34 @@ public class TestBackgroundSaveEditor extends EditorPart implements ISaveablesSo
 			return result;
 		}
 
-		@Override
 		public boolean equals(Object object) {
 			return this == object;
 		}
 
-		@Override
 		public ImageDescriptor getImageDescriptor() {
 			return input.getImageDescriptor();
 		}
 
-		@Override
 		public String getName() {
 			return input.getName();
 		}
 
-		@Override
 		public String getToolTipText() {
 			return input.getToolTipText();
 		}
 
-		@Override
 		public int hashCode() {
 			return System.identityHashCode(this);
 		}
 
-		@Override
 		public boolean isDirty() {
 			return dirty;
 		}
 
 		public void setDirty(boolean dirty) {
-			firePropertyChange("dirty", Boolean.valueOf(this.dirty), Boolean.valueOf(
+			firePropertyChange("dirty", new Boolean(this.dirty), new Boolean(
 					this.dirty = dirty));
 			getSite().getShell().getDisplay().syncExec(new Runnable(){
-				@Override
 				public void run() {
 					TestBackgroundSaveEditor.this
 					.firePropertyChange(ISaveablePart.PROP_DIRTY);
@@ -202,12 +193,10 @@ public class TestBackgroundSaveEditor extends EditorPart implements ISaveablesSo
 		mySaveable = new MySaveable();
 	}
 
-	@Override
 	public void createPartControl(Composite parent) {
-		Realm realm = DisplayRealm.getRealm(parent.getDisplay());
+		Realm realm = SWTObservables.getRealm(parent.getDisplay());
 		final DataBindingContext dbc = new DataBindingContext(realm);
 		parent.addDisposeListener(new DisposeListener() {
-			@Override
 			public void widgetDisposed(DisposeEvent e) {
 				dbc.dispose();
 			}
@@ -252,7 +241,7 @@ public class TestBackgroundSaveEditor extends EditorPart implements ISaveablesSo
 				dirtyObservable, null, null);
 		// IObservableValue inputAndOutputDiffer = new ComputedValue(realm) {
 		// protected Object calculate() {
-		// return Boolean.valueOf(!Util.equals(inputObservable.getValue(),
+		// return new Boolean(!Util.equals(inputObservable.getValue(),
 		// outputObservable.getValue()));
 		// }
 		// };
@@ -307,7 +296,6 @@ public class TestBackgroundSaveEditor extends EditorPart implements ISaveablesSo
 		GridLayoutFactory.swtDefaults().generateLayout(inputGroup);
 	}
 
-	@Override
 	public void doSave(IProgressMonitor monitor) {
 		try {
 			mySaveable.doSave(monitor);
@@ -320,34 +308,28 @@ public class TestBackgroundSaveEditor extends EditorPart implements ISaveablesSo
 		}
 	}
 
-	@Override
 	public void doSaveAs() {
 		Assert.isTrue(false, "Should not be called");
 	}
 
-	@Override
 	public void init(IEditorSite site, IEditorInput input)
 			throws PartInitException {
-		if (!(input instanceof IFileEditorInput)) {
+		if (!(input instanceof IFileEditorInput))
 			throw new PartInitException(
 					"Invalid Input: Must be IFileEditorInput");
-		}
 		setSite(site);
 		setInput(input);
 		this.input = input;
 	}
 
-	@Override
 	public boolean isDirty() {
 		return mySaveable.isDirty();
 	}
 
-	@Override
 	public boolean isSaveAsAllowed() {
 		return false;
 	}
 
-	@Override
 	public void setFocus() {
 		inputText.setFocus();
 	}
@@ -496,14 +478,12 @@ public class TestBackgroundSaveEditor extends EditorPart implements ISaveablesSo
 
 	private Data data = new Data();
 
-	@Override
 	public Saveable[] getActiveSaveables() {
 		return new Saveable[] { mySaveable };
 	}
 
-	@Override
 	public Saveable[] getSaveables() {
 		return new Saveable[] { mySaveable };
 	}
-
+	
 }
